--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo_mini.svg" />
+    <!-- Pincoya Black and Inter Font imports -->
+    <link href="https://fonts.cdnfonts.com/css/pincoya-black" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <!-- Device and screensize initial settings -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <!-- TailwindCSS import -->
+    <link rel="stylesheet" href="./src/index.css" />
+
+    <!-- Tab Title -->
+    <title>Shastamart</title>
   </head>
   <body>
     <div id="root"></div>
