--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
     <!-- Tab Title -->
     <title>Shastamart</title>
   </head>
+  <!-- React Code -->
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
