--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,20 @@
 
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo_mini.svg" />
     <!-- Pincoya Black and Inter Font imports -->
-    <link href="https://fonts.cdnfonts.com/css/pincoya-black" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.cdnfonts.com/css/pincoya-black"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jua&display=swap"
+      rel="stylesheet"
+    />
     <!-- Device and screensize initial settings -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
