--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo_mini.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logos/logo_mini.svg" />
     <!-- Pincoya Black and Inter Font imports -->
     <link
       href="https://fonts.cdnfonts.com/css/pincoya-black"
